[project]
name = "basic-agent"
version = "0.1.0"
description = "Multi-node LangGraph agent for querying branch data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langchain-ollama>=0.2",
    "langchain-core>=0.2",
    "duckdb>=1.0",
    "pandas>=2.0",
    "cryptography>=42.0",
    "python-dotenv>=1.0",
]
